k8s/service.yaml
apiVersion: v1
kind: Service
metadata:
  name: ads-ingestion
spec:
  selector:
    app: ads-ingestion
  ports:
    - port: 80
      targetPort: 8080
